# configUi

./: CMakeLists.txt  README.md  configUi-2.lua  license.txt
lua/: configUi-2.lua  configUi-3.lua
qml/ConfigUI/: ConfigUI.qml  ConfigUIWindow.qml  Control_button.qml  Control_combo.qml  Control_radio.qml  Control_spinbox.qml
tests/: CMakeLists.txt  ConfigUI_test.cpp  ConfigUI_test.qml  qml.qrc  test-configUi-2.ttt
